# MPuzzle-Game

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  mpuzzle.desktop  org.maemo.mpuzzle.service
data/help/en_GB/: MaemoPad.xml  mpuzzle.xml
debian/: changelog~  control  copyright  mpuzzle.links  rules
debian/DEBIAN/: control
images/: Makefile.am
po/: POTFILES  POTFILES.in  en_GB.po
src/: .mpuzzle.c.swo  Makefile.am  appdata.h  config.h  mpuzzle.c  mpuzzle.c~  mpuzzle.h  mpuzzle.h~
src/.deps/: mpuzzle-mpuzzle.Po
